<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include
        layout="@layout/toolbar_reutilizable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            >


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_titulo_proyecto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/titulo_proyecto"
                    android:inputType="textPersonName|time"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_descripcion_proyecto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20sp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descripcion_proyecto"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/tv_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/negro"
                android:text="@string/material_string"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:entries="@array/material" />

            <TextView
                android:id="@+id/tv_fecha_hora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/negro"
                android:text="@string/fecha_hora"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="329dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="20sp"
                android:gravity="center_vertical|center_horizontal|center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.94"
                    android:ems="10"
                    android:hint="@string/fecha_hora"
                    android:inputType="textPersonName" />

                <ImageButton
                    android:id="@+id/b_fecha_hora"
                    android:layout_width="29dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.20"
                    android:onClick="abrirCalendario"
                    app:srcCompat="@android:drawable/ic_menu_my_calendar" />

                <!--<info.hoang8f.widget.FButton
                    android:id="@+id/b_fecha_hora"
                    android:layout_width="27dp"
                    android:layout_height="wrap_content"
                    android:text="@string/seleccionar_hint"
                    fbutton:buttonColor="@color/fbutton_color_alizarin"
                    fbutton:cornerRadius="5dp"
                    fbutton:shadowColor="@color/fbutton_color_pomegranate"
                    fbutton:shadowEnabled="true"
                    fbutton:shadowHeight="5dp"
                    />-->

            </LinearLayout>


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/or_line" />

            <TextView
                android:id="@+id/tv_moneda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/negro"
                android:text="@string/tipo_moneda"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup_moneda"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20sp">

                <RadioButton
                    android:id="@+id/radioButton_euro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/euro" />

                <RadioButton
                    android:id="@+id/radioButton_dolar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dolar" />
            </RadioGroup>


            <TextView
                android:id="@+id/tv_desplazamiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/negro"
                android:text="@string/desplazamiento"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup_desplazamiento"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20sp"
                >

                <RadioButton
                    android:id="@+id/radioButton_sidespl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/si_desplazamiento" />

                <RadioButton
                    android:id="@+id/radioButton_nodespl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no_desplazamiento" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_pais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pais"
                android:textSize="16sp"
                android:textColor="@color/negro"
                android:textStyle="bold" />


            <EditText
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:hint="@string/ciudad_poblacion_pais" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_pais"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20sp"
                android:gravity="center_vertical|center_horizontal|center">

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="?attr/dividerHorizontal" />

            <TextView
                android:id="@+id/tv_privacidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacidad"
                android:textColor="@color/negro"
                android:textSize="16sp"/>


            <RadioGroup
                android:id="@+id/radioGroup_privacidad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20sp">

                <RadioButton
                    android:id="@+id/radioButton_publico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/privacidad_publico" />

                <RadioButton
                    android:id="@+id/radioButton_privado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/privacidad_privado" />

            </RadioGroup>


            <LinearLayout
            android:layout_width="329dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="20sp"
            android:gravity="center_vertical|center_horizontal|center"
            android:orientation="horizontal"
            android:weightSum="1">

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Subir_archivo"
                    android:textSize="16sp"
                    android:textColor="@color/negro"/>


                <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="35dp"
                android:layout_height="34dp"
                app:srcCompat="@android:drawable/ic_menu_upload" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBox_terminos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:layout_weight="1"
                android:text="@string/terminos_condiciones"
                android:textStyle="bold" />


            <!--<Button
                android:id="@+id/b_publicar_proyecto"
                style="@style/boton_publicar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/save_white"
                android:gravity="center_vertical|center"
                android:text="@string/publicar_proyecto" />-->

            <!--<info.hoang8f.widget.FButton
                android:id="@+id/b_publicar_proyecto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:text="@string/publicar_proyecto"
                fbutton:buttonColor="@color/fbutton_color_peter_river"
                fbutton:cornerRadius="5dp"
                fbutton:shadowColor="@color/fbutton_color_belize_hole"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="5dp"
                android:onClick="publicar_proyecto"/>-->
            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/b_publicar_proyecto"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginBottom="18dp"
                android:onClick="publicar_proyecto"
                android:text="Publicar"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:pb_colorComplete="@color/green_complete"
                app:pb_colorError="@color/red_error"
                app:pb_colorNormal="@color/blue_normal"
                app:pb_colorPressed="@color/blue_pressed"
                app:pb_colorProgress="@color/negro"
                app:pb_textComplete="Publicado"
                app:pb_textError="Error"
                app:pb_textProgress="Publicando" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>